[package]
name = "tokio-chat-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Async Await
tokio={version = "*", features = ["full"]}

# Result<() , Anyhow::Error>
anyhow={version = "*"}

# .env
dotenvy={version = "*"}

# logging?
tracing = { version = "*"}
tracing-subscriber = "*"

[dependencies.tokio-util]
version = "*"
features = ["compat"]

# DB Controll
[dependencies.tiberius]
version = "*"


[lib]
path = "src/tibe/lib.rs"
